thêm sửa, xem chi tiết

--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -18,7 +18,7 @@
                                 <span class="visually-hidden">(current)</span></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="tasklist">Danh sách CV</a>
+                            <a class="nav-link" href="/tasklist">Danh sách CV</a>
                         </li>
                     </ul>
                     <form (ngSubmit)="onSearch()" class="d-flex my-2 my-lg-0">
